--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,10 +16,7 @@
         android:layout_marginTop="16dp"
         android:layout_weight="8"
         android:contentDescription="CardStack"
-        android:src="@drawable/gray_back"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:src="@drawable/gray_back" />
 
     <TextView
         android:id="@+id/card_text"
@@ -29,9 +26,27 @@
         android:layout_weight="2"
         android:gravity="center"
         android:text="@string/start_text"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/card_stack" />
+    <TextView
+        android:id="@+id/current_player"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_weight="1"
+        android:layout_marginBottom="16dp"
+        android:gravity="center"
+        android:text="@string/current_player"
+        />
+
+    <TextView
+        android:id="@+id/next_player"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_weight="1"
+        android:layout_marginBottom="16dp"
+        android:gravity="center"
+        android:text="@string/next_player_name"
+        />
 
 </LinearLayout>
