--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:paddingStart="6dp"
+    android:paddingLeft="6dp"
+    android:paddingEnd="6dp"
+    android:paddingRight="6dp"
     android:weightSum="10"
     tools:context=".MainActivity">
 
@@ -19,31 +23,32 @@
         android:src="@drawable/gray_back" />
 
     <TextView
-        android:id="@+id/card_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_weight="2"
-        android:gravity="center"
-        android:text="@string/start_text"
-        app:layout_constraintTop_toBottomOf="@+id/card_stack" />
-    <TextView
         android:id="@+id/current_player"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_weight="1"
-        android:layout_marginBottom="16dp"
         android:gravity="center"
         android:text="@string/current_player"
-        />
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Title" />
+
+    <TextView
+        android:id="@+id/card_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_weight="1"
+        android:gravity="center"
+        android:text="@string/start_text"
+        android:layout_marginBottom="16dp"
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
+        app:layout_constraintTop_toBottomOf="@+id/card_stack" />
 
     <TextView
         android:id="@+id/next_player"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_weight="1"
         android:layout_marginBottom="16dp"
         android:gravity="center"
         android:text="@string/next_player_name"
