--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,17 +25,19 @@
     <TextView
         android:id="@+id/current_player"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_gravity="center"
         android:layout_weight="1"
         android:gravity="center"
+        android:textAllCaps="true"
         android:text="@string/current_player"
+        android:textColor="@android:color/holo_red_light"
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Title" />
 
     <TextView
         android:id="@+id/card_text"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_gravity="center"
         android:layout_weight="1"
         android:gravity="center"
@@ -51,6 +53,7 @@
         android:layout_gravity="center"
         android:layout_marginBottom="16dp"
         android:gravity="center"
+        android:textAllCaps="true"
         android:text="@string/next_player_name"
         />
 
