--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,13 +37,13 @@
     <TextView
         android:id="@+id/card_text"
         android:layout_width="wrap_content"
-        android:layout_height="0dp"
+        android:layout_height="3dp"
         android:layout_gravity="center"
         android:layout_weight="1"
         android:gravity="center"
         android:text="@string/start_text"
-        android:layout_marginBottom="16dp"
-        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
+        android:layout_marginBottom="8dp"
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
         app:layout_constraintTop_toBottomOf="@+id/card_stack" />
 
     <TextView
@@ -51,10 +51,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:layout_weight="1"
         android:layout_marginBottom="16dp"
         android:gravity="center"
-        android:textAllCaps="true"
         android:text="@string/next_player_name"
-        />
+        android:textAllCaps="true" />
 
 </LinearLayout>
