--- a/app/src/main/res/layout/add_players_screen.xml
+++ b/app/src/main/res/layout/add_players_screen.xml
@@ -9,6 +9,7 @@
         android:id="@+id/list_of_players"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
+        android:transcriptMode="alwaysScroll"
         android:layout_weight="1">
     </ListView>
 
